--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ background-color: #007bff;
     border: 3px solid var(--sky-blue);
     background-color: var(--navy);
     border-radius: 20px;
-    box-sizing: border-box; /* Ensures padding doesn’t affect width */
+    box-sizing: border-box; /* Ensures padding doesnâ€™t affect width */
 }
 .general{
     border-top-right-radius: 0;
@@ -2665,7 +2665,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 520%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -2711,7 +2711,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 620%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -2758,7 +2758,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 720%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -2805,7 +2805,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 820%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -2853,7 +2853,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 920%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -2900,7 +2900,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 1020%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -2947,7 +2947,7 @@ text-align: center;
     left: 50%; /* Center horizontally within the section */
     transform: translate(-50%, 1120%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
-    height: 400px;
+    height: 300px;
     text-align: center;
     border-radius: 20px;
     width: 85%;
@@ -3086,7 +3086,7 @@ text-align: center;
     </div>
     <div class="about-text">
         <h1>Hi, I'm Lubna Syed</h1>
-        <p>I’m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
+        <p>Iâ€™m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
     </div>
    
 </div>
@@ -3108,12 +3108,12 @@ text-align: center;
         <div class="abt-txt-box">
             <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/expert.png">
             <h3>Experience</h3>
-            <p>Learn with a teacher who truly understands English and makes every lesson clear and fun. You’re in great hands here!</p>
+            <p>Learn with a teacher who truly understands English and makes every lesson clear and fun. Youâ€™re in great hands here!</p>
         </div>
         <div class="abt-txt-box">
             <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/care.png">
             <h3>Care</h3>
-            <p>Receive one-on-one attention every step of the way. We’re here to make sure you succeed comfortably and confidently.</p>
+            <p>Receive one-on-one attention every step of the way. Weâ€™re here to make sure you succeed comfortably and confidently.</p>
         </div>
         <div class="abt-txt-box">
             <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/results.png">
@@ -3160,7 +3160,7 @@ text-align: center;
 <div class="popuptwo">
 <div class="pte">
       <h1>PTE</h1>
-      <p>PTE  is all about getting you ready to thrive in English-speaking environments, whether you’re planning to study, work, or settle down abroad. This test checks how well you can read, write, listen, and speak English, and it's known for its fast, unbiased scoring thanks to AI. If you’re in a rush and need results quickly, PTE has your back, especially for countries like Australia, New Zealand, and Canada.</p>
+      <p>PTE  is all about getting you ready to thrive in English-speaking environments, whether youâ€™re planning to study, work, or settle down abroad. This test checks how well you can read, write, listen, and speak English, and it's known for its fast, unbiased scoring thanks to AI. If youâ€™re in a rush and need results quickly, PTE has your back, especially for countries like Australia, New Zealand, and Canada.</p>
 <h4>Difficulty level: Moderate to High</h4>
 <button onclick="hidePopuptwo()"><i class="fas fa-multiply" onclick="hidePopuptwo()"></i></button>
 
@@ -3177,7 +3177,7 @@ text-align: center;
 <div class="popupthree">
   <div class="toefl">
      <h1>TOEFL</h1>
-     <p>TOEFL is your ticket if you're dreaming of studying in the U.S. or Canada. This test dives deep into how well you handle university-level English, from understanding lectures to writing essays. With thousands of schools accepting TOEFL scores, it’s a top pick for students ready to take on the academic world. Plus, the score is valid for two years, giving you time to plan your next big step.</p>
+     <p>TOEFL is your ticket if you're dreaming of studying in the U.S. or Canada. This test dives deep into how well you handle university-level English, from understanding lectures to writing essays. With thousands of schools accepting TOEFL scores, itâ€™s a top pick for students ready to take on the academic world. Plus, the score is valid for two years, giving you time to plan your next big step.</p>
 <h4>Difficulty level: High</h4>
 <button onclick="hidePopupthree()"><i class="fas fa-multiply" onclick="hidePopupthree()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupthree()"></i></div> -->
@@ -3188,7 +3188,7 @@ text-align: center;
 <div class="popupfour">
   <div class="business">
     <h1>Business English</h1>
-      <p>Want to shine in the business world? The Business English course is designed to get you confident with everything from emails to presentations. Imagine negotiating deals or leading meetings in fluent, professional English. This course isn’t just about learning words, it’s about mastering the language of global business and showing you’re ready for international success.</p>
+      <p>Want to shine in the business world? The Business English course is designed to get you confident with everything from emails to presentations. Imagine negotiating deals or leading meetings in fluent, professional English. This course isnâ€™t just about learning words, itâ€™s about mastering the language of global business and showing youâ€™re ready for international success.</p>
 <h4>Difficulty level: Moderate</h4>
 <button onclick="hidePopupfour()"><i class="fas fa-multiply" onclick="hidePopupfour()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupfour()"></i></div> -->
@@ -3199,7 +3199,7 @@ text-align: center;
 <div class="popupfive">
   <div class="spoken">
        <h1>Spoken English</h1>
- <p>If you're looking to break free from language barriers, this Spoken English course is where you start. It’s all about boosting your confidence in everyday conversations, from casual chats to professional talks. With plenty of practice, you’ll find yourself speaking naturally, expressing your thoughts clearly, and enjoying the ease that comes with real fluency.</p>
+ <p>If you're looking to break free from language barriers, this Spoken English course is where you start. Itâ€™s all about boosting your confidence in everyday conversations, from casual chats to professional talks. With plenty of practice, youâ€™ll find yourself speaking naturally, expressing your thoughts clearly, and enjoying the ease that comes with real fluency.</p>
 <h4>Difficulty level: Easy to Moderate</h4>
 <button onclick="hidePopupfive()"><i class="fas fa-multiply" onclick="hidePopupfive()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupfive()"></i></div> -->
@@ -3210,7 +3210,7 @@ text-align: center;
 <div class="popupsix">
   <div class="oxford">
        <h1>Oxford English Test</h1>
-       <p>Developed by the experts at Oxford, this test is a smart choice if you want to know where you stand with your English skills. It’s respected worldwide and covers all the basics: reading, listening, and grammar. No stress, just a solid evaluation of how ready you are for English-speaking environments, whether it’s for work, study, or travel.</p>
+       <p>Developed by the experts at Oxford, this test is a smart choice if you want to know where you stand with your English skills. Itâ€™s respected worldwide and covers all the basics: reading, listening, and grammar. No stress, just a solid evaluation of how ready you are for English-speaking environments, whether itâ€™s for work, study, or travel.</p>
 <h4>Difficulty level: Moderate </h4>
 <button onclick="hidePopupsix()"><i class="fas fa-multiply" onclick="hidePopupsix()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupsix()"></i></div> -->
@@ -3221,7 +3221,7 @@ text-align: center;
 <div class="popupseven">
   <div class="spouse">
     <h1>Life Skills for Spouse Visa</h1>
-    <p>This one’s tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? It’s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
+    <p>This oneâ€™s tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? Itâ€™s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
 </p>
 <h4>Difficulty level: Easy</h4>
 <button onclick="hidePopupseven()"><i class="fas fa-multiply" onclick="hidePopupseven()"></i></button>
@@ -3368,7 +3368,7 @@ text-align: center;
       <!-- Left Content -->
       <div class="contact-info-box" id="contact-info-box" style="flex: 1; min-width: 250px; max-width: 45%;">
         <h3 id="book-call-heading" style="font-size: 40px; color: var(--sky-blue); margin-top: 0;">Book a 1:1 Call</h3>
-        <p id="book-call-subheading" style="font-size: 20px; color: var(--sky-blue); font-weight: bold;">Ready to take the next step? <br>Let’s connect and bring your vision to life. <br> Book a 1:1 call with us to discuss your ideas.</p>
+        <p id="book-call-subheading" style="font-size: 20px; color: var(--sky-blue); font-weight: bold;">Ready to take the next step? <br>Letâ€™s connect and bring your vision to life. <br> Book a 1:1 call with us to discuss your ideas.</p>
       </div>
 
       <!-- Right Form -->
@@ -3533,32 +3533,32 @@ text-align: center;
 </div>
 <div class="mpopuptwo">
     <h1>PTE</h1>
-      <p>PTE  is all about getting you ready to thrive in English-speaking environments, whether you’re planning to study, work, or settle down abroad. This test checks how well you can read, write, listen, and speak English, and it's known for its fast, unbiased scoring thanks to AI. If you’re in a rush and need results quickly, PTE has your back, especially for countries like Australia, New Zealand, and Canada.</p>
+      <p>PTE  is all about getting you ready to thrive in English-speaking environments, whether youâ€™re planning to study, work, or settle down abroad. This test checks how well you can read, write, listen, and speak English, and it's known for its fast, unbiased scoring thanks to AI. If youâ€™re in a rush and need results quickly, PTE has your back, especially for countries like Australia, New Zealand, and Canada.</p>
 <button ><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupthree">
     <h1>TOEFL</h1>
-     <p>TOEFL is your ticket if you're dreaming of studying in the U.S. or Canada. This test dives deep into how well you handle university-level English, from understanding lectures to writing essays. With thousands of schools accepting TOEFL scores, it’s a top pick for students ready to take on the academic world. Plus, the score is valid for two years, giving you time to plan your next big step.</p>
+     <p>TOEFL is your ticket if you're dreaming of studying in the U.S. or Canada. This test dives deep into how well you handle university-level English, from understanding lectures to writing essays. With thousands of schools accepting TOEFL scores, itâ€™s a top pick for students ready to take on the academic world. Plus, the score is valid for two years, giving you time to plan your next big step.</p>
      <button ><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupfour">
 <h1>Business English</h1>
-      <p>Want to shine in the business world? The Business English course is designed to get you confident with everything from emails to presentations. Imagine negotiating deals or leading meetings in fluent, professional English. This course isn’t just about learning words, it’s about mastering the language of global business and showing you’re ready for international success.</p>
+      <p>Want to shine in the business world? The Business English course is designed to get you confident with everything from emails to presentations. Imagine negotiating deals or leading meetings in fluent, professional English. This course isnâ€™t just about learning words, itâ€™s about mastering the language of global business and showing youâ€™re ready for international success.</p>
       <button ><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupfive">
     <h1>Spoken English</h1>
- <p>If you're looking to break free from language barriers, this Spoken English course is where you start. It’s all about boosting your confidence in everyday conversations, from casual chats to professional talks. With plenty of practice, you’ll find yourself speaking naturally, expressing your thoughts clearly, and enjoying the ease that comes with real fluency.</p>
+ <p>If you're looking to break free from language barriers, this Spoken English course is where you start. Itâ€™s all about boosting your confidence in everyday conversations, from casual chats to professional talks. With plenty of practice, youâ€™ll find yourself speaking naturally, expressing your thoughts clearly, and enjoying the ease that comes with real fluency.</p>
        <button ><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupsix">
     <h1>Oxford English Test</h1>
-       <p>Developed by the experts at Oxford, this test is a smart choice if you want to know where you stand with your English skills. It’s respected worldwide and covers all the basics: reading, listening, and grammar. No stress, just a solid evaluation of how ready you are for English-speaking environments, whether it’s for work, study, or travel.</p>
+       <p>Developed by the experts at Oxford, this test is a smart choice if you want to know where you stand with your English skills. Itâ€™s respected worldwide and covers all the basics: reading, listening, and grammar. No stress, just a solid evaluation of how ready you are for English-speaking environments, whether itâ€™s for work, study, or travel.</p>
               <button ><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupseven">
     <h1>Life Skills for Spouse Visa</h1>
-    <p>This one’s tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? It’s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
+    <p>This oneâ€™s tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? Itâ€™s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
 </p>
        <button ><i class="fas fa-multiply" ></i></button>
 
